fix config files

--- a/etc/nginx_init.conf
+++ b/etc/nginx_init.conf
@@ -40,12 +40,12 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-        location / {
+            location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
         
-        include       /home/box/etc/nginx.conf;
+        include       /home/box/web/etc/nginx.conf;
 
         #error_page  404              /404.html;
 
