--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,1 +1,12 @@
+location ^~ /uploads/ {
+    root /home/box/web;
+}
+
+location ~* ^.+\.[a-z]+$ {
+    root /home/box/web/public;
+}
+
+location ~* ^.*\/[A-Za-z0-9]+$ {
+    return 404;
+} 
  
