--- a/etc/nginx_init.conf
+++ b/etc/nginx_init.conf
@@ -2,7 +2,7 @@
 #user html;
 worker_processes  1;
 
-error_log  /home/box/logs/error.log debug;
+error_log  /home/box/web/logs/error.log debug;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
